<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".Admin">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/acme"
        android:letterSpacing="0.1"
        android:text="@string/welcome_admin"
        android:textColor="@color/yellow"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.simform.customcomponent.SSCustomEdittextOutlinedBorder
        android:id="@+id/enter_your_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="phone"
        app:custom_component_border_color="@color/yellow"
        app:custom_component_border_error_color="@color/yellow"
        app:custom_component_editText_bg_color="@android:color/white"
        app:custom_component_editText_hint="@string/enter_id"
        app:custom_component_error_text_bg_color="@android:color/white"
        app:custom_component_title="@string/enter_id"
        app:custom_component_title_bg_color="@color/white"
        app:custom_component_title_color="@color/yellow"
        app:custom_component_title_error_color="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.simform.customcomponent.SSCustomEdittextOutlinedBorder
        android:id="@+id/enter_your_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="phone"
        app:custom_component_border_color="@color/yellow"
        app:custom_component_border_error_color="@color/yellow"
        app:custom_component_editText_bg_color="@android:color/white"
        app:custom_component_editText_hint="@string/enter_pass"
        app:custom_component_error_text_bg_color="@android:color/white"
        app:custom_component_title="@string/enter_pass"
        app:custom_component_title_bg_color="@color/white"
        app:custom_component_title_color="@color/yellow"
        app:custom_component_title_error_color="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_your_id" />

    <LinearLayout
        android:id="@+id/sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_card_white"
        android:backgroundTint="@color/yellow"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:fontFamily="@font/quicksand_bold"
            android:padding="10dp"
            android:textStyle="bold"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>